# aphrodite

./: .env.example  .gitignore  README.md  RETIRE.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md
schemas/: products_render.schema.json
src/aphrodite/: __init__.py  admin.py  alerts.py  api.py  assets.py  catalog_import.py  config.py  domain.py  failures.py  main.py  marketplaces.py  renderers.py  reporting.py  storage.py  store.py  worker.py  xai.py
tests/: image_fixtures.py  test_admin.py  test_alerts.py  test_api.py  test_assets.py  test_auth.py  test_catalog_import.py  test_consent_gate.py  test_domain.py  test_idempotency_and_publish_safety.py  test_products_schema.py  test_renderers.py  test_renders_projection.py  test_reporting.py  test_spend_safe_failure.py  test_storage.py  test_store.py  test_worker.py  test_worker_api.py  test_worker_contract.py  test_worker_output_contract.py  test_xai_renderer.py
